WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
203151
[LFC][TFC] Fix table's total horizontal spacing computation
https://bugs.webkit.org/show_bug.cgi?id=203151
Summary
[LFC][TFC] Fix table's total horizontal spacing computation
alan
Reported
2019-10-18 08:12:54 PDT
It's twice the size.
Attachments
Patch
(1.93 KB, patch)
2019-10-18 08:29 PDT
,
alan
koivisto
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2019-10-18 08:13:13 PDT
<
rdar://problem/56406930
>
alan
Comment 2
2019-10-18 08:29:29 PDT
Created
attachment 381304
[details]
Patch
alan
Comment 3
2019-10-18 09:12:50 PDT
Committed
r251283
: <
https://trac.webkit.org/changeset/251283
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug